add code processing for c, cpp, go, python and corresponding logic
